examples/test/testpolicy11426.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11426
  namespace: namespace259
spec:
  podSelector:
    matchLabels:
      key48: value44
      key36: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value41
          key11: value42
          key40: value16
      podSelector:
        matchLabels:
          key2: value43
          key40: value28
